--- a/Mad-Libs/style.css
+++ b/Mad-Libs/style.css
@@ -16,10 +16,10 @@ html, body {
   top: 50%;
   z-index: 4;
   width: 100vh;
-  height: 80vh;
+  height: 90vh;
   margin: -76px 0 0 -76px;
   margin-left: -50vh;
-  margin-top: -40vh;
+  margin-top: -45vh;
   border-radius: 20px;
   border: 5px solid;
   background-color: #222222;
@@ -28,14 +28,14 @@ html, body {
 
 #popup p {
   font-size: 20px;
-  width: 50%;
   text-align: center;
-  height: 100%;
+  width: 80%;
+  margin-left: 9vh;
 }
 
 #popup:hover {
-  -ms-transform: scale(1.1); /* IE 9 */
-	-webkit-transform: scale(1.1); /* Safari 3-8 */
+  -ms-transform: scale(1.05); /* IE 9 */
+	-webkit-transform: scale(1.05); /* Safari 3-8 */
 	transform: scale(05.);
 }
 
